fix: detectar rutas absolutas del ejecutable portable y liberar v1.0.4